--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -759,7 +759,7 @@ input:checked+.slider::before {
   color: #663344;
 }
 
-.switch-text.proximity {
+.switch-text.duration {
   color: #272727; 
 }
 
@@ -811,3 +811,29 @@ input:checked+.slider::before {
     transform: translate(-50%, -70%);
   }
 }
+
+.scroll-to-top {
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #c8c8c8;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  z-index: 1000;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  transition: background-color 0.2s;
+}
+
+.scroll-to-top:hover {
+ opacity: 0.9;
+}
+
+
